--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,17 @@
 {
   "compilerOptions": {
-    "typeRoots": ["./node_modules/@types", "@types"],
+    "typeRoots": [
+      "./node_modules/@types",
+      "src/**/*",
+      "types/**/*",
+    ],
     "target": "es2016",
     "module": "commonjs",
     "rootDir": "./src",
     "outDir": "./dist",
     "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,  
+    "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true
   }
-}                                        
+}
