--- a/package.json
+++ b/package.json
@@ -23,9 +23,10 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/dotenv": "^8.2.3",
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.7",
-    "@types/node": "^22.9.0",
+    "@types/node": "^22.9.3",
     "@types/otp-generator": "^4.0.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3"
