--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "description": "just a backend practice project",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cloudinary": "^2.5.1",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.1",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.7",
     "otp-generator": "^4.0.1",
     "path": "^0.12.7",
@@ -26,6 +28,7 @@
     "@types/dotenv": "^8.2.3",
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.7",
+    "@types/multer": "^1.4.12",
     "@types/node": "^22.9.3",
     "@types/otp-generator": "^4.0.2",
     "ts-node": "^10.9.2",
