--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "nodemon": "^3.1.7",
     "otp-generator": "^4.0.1",
     "path": "^0.12.7",
+    "redis": "^4.7.0",
+    "socket.io": "^4.8.1",
     "twilio": "^5.3.5"
   },
   "devDependencies": {
