--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "backend-typescript",
   "version": "1.0.0",
   "main": "./src/server.ts",
+  "type": "commonjs",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon ./src/server.ts",
-    "start":"node ./src/server.ts"
+    "build": "tsc", 
+    "start":"node dist/server.js"
   },
   "keywords": [],
   "author": "jatin verma",
