--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
       "types/**/*",
     ],
     "target": "es2016",
-    "module": "commonjs",
+    "module": "NodeNext",
     "rootDir": "./src",
     "outDir": "./dist",
     "esModuleInterop": true,
